--- a/P7_rodriguez_adrian/P7_03_phase_2_train.html
+++ b/P7_rodriguez_adrian/P7_03_phase_2_train.html
@@ -14277,13 +14277,19 @@ Cette nouvelle méthode fera appel au dernier YOLO, version 4.</p>
 </ul>
 <h2 id="Prototype">Prototype<a class="anchor-link" href="#Prototype">&#182;</a></h2><ul>
 <li>Dataset : <a href="https://www.kaggle.com/jessicali9530/stanford-dogs-dataset">Stanford Dogs Dataset</a></li>
-<li>Méthode baseline : <a href="https://github.com/Adrian1903/Classez-des-images-l-aide-d-algorithmes-de-Deep-Learning/blob/master/dev/04_cnn_transfer_learning.ipynb">Modèle Xception 2017 (en production)</a> </li>
+<li>Méthode baseline : <a href="https://github.com/Adrian1903/Classez-des-images-l-aide-d-algorithmes-de-Deep-Learning/blob/master/dev/04_cnn_transfer_learning.ipynb">Modèle Xception 2017 (en production)</a>, <a href="https://github.com/Adrian1903/Classez-des-images-l-aide-d-algorithmes-de-Deep-Learning/blob/master/dev/05_classification_report.ipynb">Rapport de classification</a></li>
 <li>Méthode mise en oeuvre :<ul>
 <li>Phase 1 : Intégration et mesure du détecteur d’objet en production</li>
 <li>Phase 2 : Si résultat de la phase 1 insuffisant, apprentissage du modèle existant avec photos recadrées et mesure des résultats</li>
 </ul>
 </li>
 </ul>
+
+</div>
+</div>
+<div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+<p>Ce notebook entraine de nouveaux les modèles avec les photos nettoyées.</p>
 
 </div>
 </div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs  ">
